--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,6 +11,12 @@
         app:showAsAction="never"/>
 
     <item
+        android:id="@+id/iDisconnect"
+        android:title="@string/sDisconnect"
+        android:orderInCategory="1"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/iHelp"
         android:title="@string/sHelp"
         android:orderInCategory="99"
