Melo Android -> Arduino Falta Arduino -> Android

--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
-<!--    <TextView
+    <TextView
         android:text="@string/sRecibo"
         android:paddingTop="30dp"
         android:layout_width="wrap_content"
@@ -52,6 +52,5 @@
         android:editable="false"
         android:background="@color/accent_material_dark"
         android:textColor="@color/primary_dark_material_dark"/>
-        -->
 
 </LinearLayout>
