--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -1,6 +1,11 @@
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    >
+<LinearLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.luisgoyes.ejemplobluetooth.index"
@@ -54,3 +59,4 @@
         android:textColor="@color/primary_dark_material_dark"/>
 
 </LinearLayout>
+</ScrollView>
